fix: carbon offset layout issues

--- a/src/components/SwapEtherspotKlimaZap.css
+++ b/src/components/SwapEtherspotKlimaZap.css
@@ -9,8 +9,12 @@
   background: green;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-direction: column;
+}
+
+.swap-form-etherspot.swap-form-etherspot-carbon {
+  display: flex;
+  justify-content: start;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -19,8 +23,11 @@
   }
 }
 
+.swap-form-etherspot .swap-input-etherspot {
+  background-color: white;
+}
 @media only screen and (max-width: 500px) {
-  .swap-form-etherspot .swap-input {
+  .swap-form-etherspot .swap-input-etherspot {
     margin-left: 16px !important;
     margin-right: 16px !important;
   }
